Fixed Scrollbar an Added jsChallenge Day-2

--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@ header > nav > ul {
   font-size: 1.8rem;
   font-weight: 700;
 }
+
 .subTitle {
   font-size: 1rem;
   margin-top: 25px;
@@ -170,9 +171,29 @@ header > nav > ul {
 .projectCardsContainer {
   width: 100%;
   overflow-x: scroll;
+  /* scrollbar-width: 50px; */
+  scrollbar-color: black;
   display: flex;
   gap: 1.2rem;
   padding-bottom: 1rem;
+}::-webkit-scrollbar {
+  height: 10px;
+}
+::-webkit-scrollbar-track {
+  background: rgb(179, 177, 177);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(41, 37, 37);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(100, 100, 100);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:active {
+  background: rgb(68, 68, 68);
+  border-radius: 10px;
 }
 .projectCard > img {
   width: 15rem;
@@ -181,6 +202,7 @@ header > nav > ul {
 .projectCard > img:hover {
   width: 16rem;
   border-radius: 0.9rem;
+  transition: all 0.2s;
 }
 .projectCard > .title {
   margin-top: 0.4rem;
